--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -370,7 +370,7 @@
       top: 50%;
       left: 50%;
       text-decoration: none;
-      transform: translate(-3.1rem, 18rem);
+      transform: translate(-3.1rem, 12rem);
       color: white;
       height:0;
       
@@ -390,7 +390,7 @@
         top: 50%;
         left: 50%;
         text-decoration: none;
-        transform: translate(-3.1rem, 23rem);
+        transform: translate(-3.1rem, 18rem);
         color: white;
         height:0;
       
@@ -410,7 +410,7 @@
           top: 60%;
           left: 50%;
           text-decoration: none;
-          transform: translate(-3.1rem, 28rem);
+          transform: translate(-3.1rem, 24rem);
           color: white;
           }
          
