--- a/src/pages/Beats.css
+++ b/src/pages/Beats.css
@@ -13,10 +13,16 @@ color:orange;
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 3.17%;
     left: 0;
     opacity: 1;
     z-index: 1;
     transition: all 0.5s ease;
    background: rgb(211, 0, 211);
+  }
+
+  .card {
+      display: flex;
+      top: 50%;
+      width: 100%;
+      position: absolute;
   }
